gcc/testsuite/rust/rustc/ui/parser/recover/recover-field-extra-angle-brackets-in-struct-with-a-field.rs
struct TypedArenaChunk {
    next: Option<String>>
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

